syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.DS.garyproject.SmartBuildingGRPC";
option java_outer_classname = "ProjectorServiceImpl";

package SmartBuildingGRPC;

service ProjectorService {
  rpc initialAppliance(Empty) returns (projectorResponse) {}
  
  rpc changeVolume(valueRequest) returns (stream valueResponse) {}
  
  rpc changeChannel(valueRequest) returns (stream valueResponse) {}
  
  rpc onOff(booleanRequest) returns (booleanResponse) {}
  
  rpc changeApplianceName(stringRequest) returns (stringResponse) {}	
  
  rpc changeApplianceNameStream(stream stringRequest) returns (stream stringResponse) {}

}

message Empty {

}

message stringRequest {
	string text = 1;
}

message stringResponse {
	string text = 1;
}

message booleanRequest {
	bool msg = 2;
}

message booleanResponse {
	bool msg = 2;
}

message valueRequest {
  int32 length = 3;
}

message valueResponse {
  int32 length = 3;
}

message projectorResponse {
	string aname = 4;
	string status = 5;
	int32 volume = 6;
	int32 channel = 7;
}
